APMsubmarine/errorlog.txt
$ cd ardupilot/APMsubmarine/
$ make linux

// BUILDROOT=/tmp/APMsubmarine.build HAL_BOARD=HAL_BOARD_LINUX HAL_BOARD_SUBTYPE=HAL_BOARD_SUBTYPE_LINUX_NONE TOOLCHAIN=NATIVE EXTRAFLAGS=-DGIT_VERSION="5352f616"
%% APMsubmarine.o
APMsubmarine.cpp: In member function 'void Submarine::ahrs_update()':
APMsubmarine.cpp:142:19: error: 'class DataFlash_File' has no member named 'Log_Write_IMU'
         DataFlash.Log_Write_IMU(ins);
                   ^
APMsubmarine.cpp: In member function 'void Submarine::update_compass()':
APMsubmarine.cpp:196:23: error: 'class DataFlash_File' has no member named 'Log_Write_Compass'
             DataFlash.Log_Write_Compass(compass);
                       ^
APMsubmarine.cpp: In member function 'void Submarine::update_GPS_50Hz()':
APMsubmarine.cpp:298:27: error: 'class DataFlash_File' has no member named 'Log_Write_GPS'
                 DataFlash.Log_Write_GPS(gps, i, current_loc.alt);
                           ^
make: *** [/tmp/APMsubmarine.build/APMsubmarine.o] Error 1

